W7 add endpoint
